@@ -1,71 +1,64 @@
 use strict;
 use warnings;
-use Test::More tests => 33;
+use Test::More tests => 3;
 use Test::Exception;
+use File::Copy;
 use t::util;
 
 use_ok('npg_pipeline::function::seq_to_irods_archiver');
 
 my $util = t::util->new();
-local $ENV{NPG_CACHED_SAMPLESHEET_FILE} = q[t/data/samplesheet_1234.csv];
 
 my $tmp_dir = $util->temp_directory();
+my $script = q{npg_publish_illumina_run.pl};
 
-my $analysis_runfolder_path = $util->analysis_runfolder_path();
-my $pb_cal = q[/Data/Intensities/Bustard1.3.4_09-07-2009_auto/PB_cal];
-my $pb_cal_path = $analysis_runfolder_path . $pb_cal;
+subtest 'MiSeq run' => sub {
+  plan tests => 33;
 
-sub create_analysis {
-  `mkdir -p $analysis_runfolder_path/$pb_cal/archive`;
-  `mkdir -p $analysis_runfolder_path/Config`;
-  `cp t/data/Recipes/TileLayout.xml $analysis_runfolder_path/Config/`;
-  `ln -s $pb_cal $analysis_runfolder_path/Latest_Summary`;
+  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} = q{t/data/miseq/samplesheet_16850.csv};
 
-  my $archive_root = qq{$analysis_runfolder_path/$pb_cal/archive/};
-  foreach my $i (1..7) {
-    foreach my $extension (qw{bam}) {
-      my $file = $archive_root . qq{1234_$i}.qq{.$extension};
-      `touch $file`;
-    }
+  my $id_run  = 16850;
+  my $rf_name = '150710_MS2_16850_A_MS3014507-500V2';
+  my $paths = $util->create_runfolder(
+    join(q[/], $tmp_dir, 'analysis'),
+    {runfolder_name => $rf_name,
+     analysis_path  => 'BAM_basecalls_20181130'}
+  );
+  my $rfpath  = $paths->{'runfolder_path'};
+  for my $name (qw/RunInfo runParameters/) {
+    my $copied = copy qq(t/data/miseq/${id_run}_${name}.xml),
+                      qq($rfpath/${name}.xml);
+    ok($copied, "$name copied");
   }
+  my $archive_path = $paths->{'archive_path'};
+  my $col = qq{/seq/$id_run};
+  my $restart_file = qr/${archive_path}\/publish_illumina_run_${id_run}_20181204-\d+\.restart_file\.json/;
 
-  `touch $archive_root/1234_8_human.cram`;
-  `touch $archive_root/1234_8.cram`;
+  my $a = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204}
+  );
+  isa_ok($a, q{npg_pipeline::function::seq_to_irods_archiver}, q{object test});
+  ok (!$a->no_irods_archival, 'no_irods_archival flag is unset');
 
-  return 1;
-}
-
-create_analysis();
-
-{
-  my $archive_path = "$pb_cal_path/archive";
-  my $bam_irods;
-  lives_ok { $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    timestamp         => q{20090709-123456},
-    verbose           => 0,
-    recalibrated_path => $pb_cal_path,
-  ); } q{created with run_folder ok};
-  isa_ok($bam_irods , q{npg_pipeline::function::seq_to_irods_archiver}, q{object test});
-  ok (!$bam_irods->no_irods_archival, 'no_irods_archival flag is unset');
-
-  my $da = $bam_irods->create();
+  my $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   my $d = $da->[0];
   isa_ok($d, q{npg_pipeline::function::definition});
 
   is ($d->created_by, q{npg_pipeline::function::seq_to_irods_archiver},
     'created_by is correct');
-  is ($d->created_on, $bam_irods->timestamp, 'created_on is correct');
-  is ($d->identifier, 1234, 'identifier is set correctly');
-  is ($d->job_name, q{publish_illumina_run_1234_20090709-123456},
+  is ($d->created_on, $a->timestamp, 'created_on is correct');
+  is ($d->identifier, $id_run, 'identifier is set correctly');
+  is ($d->job_name, qq{publish_illumina_run_${id_run}_20181204},
     'job_name is correct');
   like ($d->command,
-    qr/npg_publish_illumina_run\.pl --archive_path $archive_path --runfolder_path $analysis_runfolder_path --restart_file ${archive_path}\/publish_illumina_run_1234_20090709-123456-\d+\.restart_file\.json --max_errors 10/,
+    qr/$script --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10/,
     'command is correct');
   is ($d->command_preexec,
-    'npg_pipeline_script_must_be_unique_runner -job_name="publish_illumina_run_1234"',
+    'npg_pipeline_script_must_be_unique_runner -job_name="publish_illumina_run_16850"',
     'preexec command is correct');
   ok (!$d->has_composition, 'composition not set');
   ok (!$d->excluded, 'step not excluded');
@@ -75,79 +68,120 @@ create_analysis();
   is ($d->fs_slots_num, 1, 'one fs slot is set');
   ok ($d->reserve_irods_slots, 'iRODS slots to be reserved');
   lives_ok {$d->freeze()} 'definition can be serialized to JSON';
-  
-  $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    verbose           => 0,
-    no_irods_archival => 1,
-    recalibrated_path => $pb_cal_path,
+
+  $a = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204},
+    no_irods_archival => 1
   );
-  ok ($bam_irods->no_irods_archival, 'no_irods_archival flag is set');
-  $da = $bam_irods->create();
+  ok ($a->no_irods_archival, 'no_irods_archival flag is set');
+  $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   $d = $da->[0];
   isa_ok($d, q{npg_pipeline::function::definition});
   ok ($d->excluded, 'step is excluded');
 
-  $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    verbose           => 0,
-    local              => 1,
-    recalibrated_path => $pb_cal_path,
+  $a = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204},
+    local              => 1
   );
-  ok ($bam_irods->no_irods_archival, 'no_irods_archival flag is set');
-  $da = $bam_irods->create();
+  ok ($a->no_irods_archival, 'no_irods_archival flag is set');
+  $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   $d = $da->[0];
   ok ($d->excluded, 'step is excluded');
 
-  $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    recalibrated_path => $pb_cal_path,
-    timestamp         => q{20090709-123456},
-    verbose           => 0,
-    lanes             => [8],
+  $a  = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204},
+    lanes             => [1]
   );
-  $da = $bam_irods->create();
+  $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   $d = $da->[0];
   like ($d->command,
-    qr/npg_publish_illumina_run\.pl --archive_path $archive_path --runfolder_path $analysis_runfolder_path --restart_file ${archive_path}\/publish_illumina_run_1234_20090709-123456-\d+\.restart_file\.json --max_errors 10 --positions 8/,
+    qr/$script --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10/,
     'command is correct');
 
-  $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    id_flowcell_lims  => q{1023456789111},
-    recalibrated_path => $pb_cal_path,
-    timestamp         => q{20090709-123456},
-    verbose           => 0,
+  $a = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204},
+    id_flowcell_lims  => q{1023456789111}
   );
-  $da = $bam_irods->create();
+  $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   $d = $da->[0];
   like ($d->command,
-    qr/npg_publish_illumina_run\.pl --archive_path $archive_path --runfolder_path $analysis_runfolder_path --restart_file ${archive_path}\/publish_illumina_run_1234_20090709-123456-\d+\.restart_file\.json --max_errors 10 --alt_process qc_run/,
+    qr/$script --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10 --alt_process qc_run/,
     'command is correct');
 
-  $bam_irods = npg_pipeline::function::seq_to_irods_archiver->new(
-    run_folder        => q{123456_IL2_1234},
-    runfolder_path    => $analysis_runfolder_path,
-    recalibrated_path => $pb_cal_path,
-    timestamp         => q{20090709-123456},
-    verbose           => 0,
-    lims_driver_type  => 'samplesheet',
+  $a = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204},
+    lims_driver_type  => 'samplesheet'
   );
-  $da = $bam_irods->create();
+  $da = $a->create();
   ok ($da && @{$da} == 1, 'an array with one definition is returned');
   $d = $da->[0];
   like ($d->command,
-    qr/npg_publish_illumina_run\.pl --archive_path $archive_path --runfolder_path $analysis_runfolder_path --restart_file ${archive_path}\/publish_illumina_run_1234_20090709-123456-\d+\.restart_file\.json --max_errors 10 --driver-type samplesheet/,
+    qr/ --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10 --driver-type samplesheet/,
     'command is correct');
-}
+};
+
+subtest 'NovaSeq run' => sub {
+  plan tests => 5;
+
+  my $id_run  = 26291;
+  my $rf_name = '180709_A00538_0010_BH3FCMDRXX';
+  my $rfpath  = qq{t/data/novaseq/$rf_name};
+  my $bbc_path = qq{$rfpath/Data/Intensities/BAM_basecalls_20180805-013153};
+  my $archive_path = qq{$bbc_path/no_cal/archive};
+  my $col = qq{/seq/illumina/runs/$id_run};
+  my $restart_file = qr/${archive_path}\/publish_illumina_run_${id_run}_20181204-\d+\.restart_file\.json/;
+
+  local $ENV{NPG_CACHED_SAMPLESHEET_FILE} =
+    qq{$bbc_path/metadata_cache_26291/samplesheet_26291.csv};
+
+  my $a  = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204}
+  );
+  my $da = $a->create();
+  ok ($da && @{$da} == 1, 'an array with one definition is returned');
+  my $d = $da->[0];
+  isa_ok($d, q{npg_pipeline::function::definition});
+  like ($d->command,
+    qr/$script --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10/,
+    'command is correct');
+
+  $a  = npg_pipeline::function::seq_to_irods_archiver->new(
+    run_folder        => $rf_name,
+    runfolder_path    => $rfpath,  
+    id_run            => $id_run,
+    timestamp         => q{20181204}, 
+    lanes             => [2]
+  );
+
+  $da = $a->create();
+  ok ($da && @{$da} == 1, 'an array with one definition is returned');
+  $d = $da->[0];
+  like ($d->command,
+    qr/$script --collection $col --archive_path $archive_path --runfolder_path $rfpath --restart_file $restart_file --max_errors 10 --positions 2/,
+    'command is correct');
+};
 
 1;
 
